# esp32RadioAlarmClockPublic

./: CMakeLists.txt  README.md  platformio.ini
3D_models/: base.stl  bottom_casing_rev2.stl  casing_backing.igs  casing_backing_final.stl  speaker_box.igs  speaker_box.stl  speaker_box_component.igs  speaker_box_component_final.stl  ttgo_t4.stl
lib/ESP32-audioI2S/: .piopm  library.json  library.properties
lib/ESP32-audioI2S/src/: Audio.cpp  Audio.h
lib/ESP32-audioI2S/src/aac_decoder/: aac_decoder.cpp  aac_decoder.h
lib/TFT_eSPI/: TFT_eSPI.cpp  User_Setup.h
lib/Volos/src/: Orbitron_12.h  Orbitron_14.h  Orbitron_18.h  Orbitron_8.h  Orbitron_Medium_16.h  ani.h  dejavusansmono_12.h  dejavusansmono_8.h
src/: alarm_functions.cpp  alarm_functions.h  audio_functions.cpp  audio_functions.h  bitmap.c  commands.cpp  commands.h  current_sensor_functions.cpp  current_sensor_functions.h  decode_serial.py  display.cpp  display.h  globals.cpp  globals.h  graphing_functions.cpp  graphing_functions.h  handleNewMessages.cpp  handleNewMessages.h  hardware_definitions.h  main.cpp  main.h  readme.txt  serial_functions.cpp  serial_functions.h  storage_functions.cpp  storage_functions.h  wifi_functions.cpp  wifi_functions.h
